--- a/regressie.bib
+++ b/regressie.bib
@@ -7,6 +7,12 @@
   langid = {dutch}
 }
 
+@misc{chouldechovaRegressionDiagnosticPlots,
+  title = {Regression Diagnostic Plots},
+  author = {Chouldechova, Alexandra},
+  url = {https://www.andrew.cmu.edu/user/achoulde/94842/homework/regression_diagnostics.html}
+}
+
 @misc{datacampLinearRegressionTutorial,
   title = {R {{Linear Regression Tutorial}}: Lm {{Function}} in {{R}} with {{Code Examples}}},
   author = {Datacamp},
@@ -32,6 +38,17 @@
   journal = {Data Science Blog},
   url = {https://www.datascienceblog.net/post/machine-learning/linear_models/},
   langid = {english}
+}
+
+@article{FisherExactTest2022,
+  title = {Fisher's Exact Test},
+  year = {2022},
+  month = oct,
+  journal = {Wikipedia},
+  url = {https://en.wikipedia.org/w/index.php?title=Fisher%27s_exact_test&oldid=1117572309},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english},
+  annotation = {Page Version ID: 1117572309}
 }
 
 @misc{hackerearthBeginnersGuideRegression,
@@ -62,4 +79,17 @@
   edition = {1st edition},
   isbn = {978-1-986406-85-7},
   langid = {english}
+}
+
+@misc{universityofvirginiaUnderstandingDiagnosticPlots,
+  title = {Understanding {{Diagnostic Plots}} for {{Linear Regression Analysis}} | {{University}} of {{Virginia Library Research Data Services}} + {{Sciences}}},
+  author = {{University of Virginia}},
+  url = {https://data.library.virginia.edu/diagnostic-plots/},
+  langid = {english}
+}
+
+@misc{UnusualObservationsOutlier,
+  title = {{Unusual Observations - Outlier, Leverage, and Influential Points}},
+  url = {https://www.theopeneducator.com/doe/Regression/outlier-leverage-influential-points},
+  langid = {dutch}
 }
